# rust_axum_base

./: .gitignore  Cargo.toml  LICENSE  README.md  api.http  app_config.toml  rum.md
src/: app_state.rs  config.rs  database.rs  depends.rs  diag.rs  main.rs  redis.rs  tests.rs
src/database/: mod.rs  route.rs  sample_user_repository.rs
src/entity/: user.rs
src/repository/: mod.rs  user_repository.rs
src/route/: mod.rs  redis_route.rs  sample.rs  user_route.rs
src/session/: exchange.rs  extract.rs  mod.rs  route.rs  sample_user.rs
src/session/olds/: extract.rs  route.rs
src/usecase/: get_user_usecase.rs  mod.rs  user_usecase.rs
