[package]
name = "rust_axum_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["multipart", "ws", "http2"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
