[package]
name = "rust_axum_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-session = "3.0.0"
axum = { version = "0.7.5", features = ["multipart", "ws", "http2"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
cargo-watch = "8.5.2"
http = "1.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"

